- removed preparations for robots.txt-support from http-crawler as we've decided to re-enqueue commands whose location the server redirects - added (configurable) support for Content-Encoding, so that servers may send compressed responses now
git-svn-id: svn://svn.paxle.net/paxle/trunk@890 f5d3ab42-bacf-4b1a-9692-565be65a0cfe